フラッシュライトを追加

--- a/Xamarin_Essentials/Xamarin_Essentials/Views/MainPage.xaml
+++ b/Xamarin_Essentials/Xamarin_Essentials/Views/MainPage.xaml
@@ -14,9 +14,9 @@
             </x:Arguments>
         </NavigationPage>
 
-        <NavigationPage Title="About">
+        <NavigationPage Title="FlashLight">
             <x:Arguments>
-                <views:AboutPage />
+                <views:FlashLightPage />
             </x:Arguments>
         </NavigationPage>
     </TabbedPage.Children>
