--- a/Xamarin_Essentials/Xamarin_Essentials/Views/MainPage.xaml
+++ b/Xamarin_Essentials/Xamarin_Essentials/Views/MainPage.xaml
@@ -19,6 +19,12 @@
                 <views:FlashLightPage />
             </x:Arguments>
         </NavigationPage>
+
+        <NavigationPage Title="TextToSpeech">
+            <x:Arguments>
+                <views:TextToSpeechPage />
+            </x:Arguments>
+        </NavigationPage>
     </TabbedPage.Children>
     
 </TabbedPage>
