--- a/Xamarin_Essentials/Xamarin_Essentials/Views/MainPage.xaml
+++ b/Xamarin_Essentials/Xamarin_Essentials/Views/MainPage.xaml
@@ -19,6 +19,12 @@
                 <views:TextToSpeechPage />
             </x:Arguments>
         </NavigationPage>
+        
+        <NavigationPage Title="GPS">
+            <x:Arguments>
+                <views:LocationPage />
+            </x:Arguments>
+        </NavigationPage>
     </TabbedPage.Children>
     
 </TabbedPage>
