バイブレーションを追加

--- a/Xamarin_Essentials/Xamarin_Essentials/Views/MainPage.xaml
+++ b/Xamarin_Essentials/Xamarin_Essentials/Views/MainPage.xaml
@@ -31,6 +31,12 @@
                 <views:CompassPage />
             </x:Arguments>
         </NavigationPage>
+
+        <NavigationPage Title="Vibration">
+            <x:Arguments>
+                <views:VibrationPage />
+            </x:Arguments>
+        </NavigationPage>
     </TabbedPage.Children>
     
 </TabbedPage>
